# medea

./: .clippy.toml  .dockerignore  .editorconfig  .env  .gitignore  .rustfmt.toml  .travis.yml  .yarnrc  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  RELEASING.md  build.rs  config.default.toml  config.toml  docker-compose.control.yml  docker-compose.coturn.yml  docker-compose.e2e-files.yml  docker-compose.e2e.yml  docker-compose.medea.yml  docker-compose.yml  room_spec.yml  room_spec_test.yml  room_spec_with_3_members.yml  signaling_test.html  signling_test.html  test.rb  travis.yml  travis_install.sh
control-api-mock/: Cargo.toml  README.md
control-api-mock/src/: client.rs  main.rs  prelude.rs
control-api-mock/src/client/: mod.rs
control-api-mock/src/server/: endpoint.rs  member.rs  mod.rs  room.rs
crates/coturn-telnet/: CHANGELOG.md  Cargo.toml  README.md
crates/coturn-telnet/src/: codec.rs  connection.rs  lib.rs  pool.rs
crates/crate-version-grep/: Cargo.toml  README.md
crates/crate-version-grep/src/: main.rs
crates/e2e-tests-runner/: Cargo.toml  README.md  test_template.html
crates/e2e-tests-runner/src/: main.rs  mocha_result.rs  test_runner.rs
crates/js_caused/: Cargo.toml
crates/js_caused/src/: lib.rs
crates/js_caused_derive/: Cargo.toml
crates/js_caused_derive/src/: lib.rs
crates/medea-coturn-telnet-client/: CHANGELOG.md  Cargo.toml  README.md
crates/medea-coturn-telnet-client/src/: client.rs  con_pool.rs  framed.rs  lib.rs  pool.rs  proto.rs  sessions_parser.rs
crates/medea-macro/: CHANGELOG.md  Cargo.toml  README.md
crates/medea-macro/src/: caused.rs  dispatchable.rs  enum_delegate.rs  event_dispatcher.rs  js_caused.rs  lib.rs  watchers.rs
crates/medea-macro/tests/: caused.rs  js_caused.rs  mod.rs
crates/medea-reactive/: CHANGELOG.md  Cargo.toml  README.md
crates/medea-reactive/src/: cell.rs  lib.rs  option.rs  progressable.rs
crates/medea_macro/: Cargo.toml
crates/medea_macro/src/: enum_delegate.rs  lib.rs  state_machine_delegate.rs
crates/test/connection-dropper/: Cargo.toml
crates/test/e2e-tests-runner/: Cargo.toml  README.md  test_template.html
crates/tracerr/: Cargo.toml
crates/tracerr/src/: lib.rs  trace.rs
e2e/: Cargo.toml  docker-compose.host.yml  docker-compose.yml  index.html
e2e-tests/: .gitignore  Cargo.toml  README.md  connection_loss_tests.spec.js  fail.spec.js  index.html  package-lock.json  package.json  pub_pub_video_call.spec.js  random_connection_loss.spec.js  test.html  test.js  test_template.html  webpack.config.js
e2e-tests/cypress/integration/: pub_pub_video_call.spec.js
e2e-tests/cypress/plugins/: index.js
e2e-tests/helper/: base.js  pub_pub_video_call.js
e2e-tests/js/: index.js
e2e-tests/specs/: pub_pub_video_call.spec.js  pub_pub_video_call.spec2.js
e2e-tests/src/: main.rs  mocha_result.rs  test_runner.rs
e2e/features/: create_endpoint.feature  disable_remote_media.feature  example.feature  join_room.feature  local_tracks_create.feature  media_disable.feature  media_mute.feature  on_join.feature  on_leave.feature  room_join.feature
e2e/features/test/: create_endpoint.feature
e2e/src/: browser.rs  browser_status.rs  conf.rs  control.rs  file_server.rs  graceful_shutdown.rs  lib.rs  main.rs  world.rs
e2e/src/browser/: client.rs  executable.rs  js.rs  mod.rs
e2e/src/entity/: callback_subscriber.rs  connection.rs  connections_store.rs  jason.rs  mod.rs  room.rs
e2e/src/model/: member.rs
e2e/src/object/: connection.rs  connections_store.rs  jason.rs  local_track.rs  local_tracks_store.rs  mod.rs  remote_track.rs  room.rs  track.rs  track_store.rs  tracks_store.rs
e2e/src/world/: member.rs  mod.rs
e2e/tests/: conf.rs  control.rs  docker-compose.host.yml  main.rs
e2e/tests/features/: create_endpoint.feature  enable_remote_media.feature  on_new_connection_fires.feature
e2e/tests/steps/: control_api.rs  media_state.rs  mod.rs  room.rs  track.rs
e2e/tests/world/: member.rs  mod.rs
jason/: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs  webdriver.json
jason/.cargo/: config
jason/android/: .gitignore  Cargo.toml  build.gradle
jason/android/.cargo/: config
jason/android/app/: build.gradle
jason/android/src/: context.rs  jni.rs  lib.rs
jason/demo/: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  index.html  minikube.vals.yaml  package.json  staging.vals.yaml
jason/demo/chart/: .editorconfig
jason/demo/conf/: demo.conf  mime.types  nginx.vh.conf
jason/e2e/: package.json
jason/e2e-demo/: .gitignore  README.md  index.html  package.json  video-call.html  webpack.config.js  webpack.dev.js  webpack.prod.js
jason/e2e-demo/js/: index.js
jason/e2e-tests/: README.md  package.json  webpack.config.js
jason/e2e-tests/js/: index.js
jason/e2e/js/: index.js
jason/flutter/: .editorconfig  .flutter-plugins  .flutter-plugins-dependencies  .gitignore  .packages  CHANGELOG.md  README.md  pubspec.yaml
jason/flutter-demo/: .gitignore  Makefile  README.md  pubspec.yaml
jason/flutter-demo/lib/: main.dart
jason/flutter-demo/test/: widget_test.dart
jason/flutter/.dart_tool/: package_config.json  package_config_subset
jason/flutter/android/: .gitignore  build.gradle  gradle.properties  (+1 more)
jason/jason-dummy/: Cargo.toml  build.rs
jason/jason-hello-world/: Cargo.toml  build.rs
jason/src/: connection.rs  jason.rs  lib.rs  log.rs  room.rs
jason/tests/: mock_navigator.js  web.rs
medea-client/: Cargo.toml  README.md
medea-client/e2e/: README.md
medea-client/src/: lib.rs
medea_derives/: Cargo.toml
medea_derives/src/: event_dispatcher.rs  lib.rs  room_event_dispatcher.rs  state_machine_shared_fn_accessor.rs
mk/: up.mk  (+4 more)
mock/control-api/: CHANGELOG.md  Cargo.toml  Dockerfile  README.md
proto/client-api/: CHANGELOG.md  Cargo.toml  LICENSE-MIT.md  README.md
proto/control-api/: CHANGELOG.md  Cargo.toml  README.md  build.rs
proto/grpc/: CHANGELOG.md  Cargo.toml  LICENSE-APACHE.md  README.md  build.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
(+1048 files in other folders)
