[package]
name = "medea"
version = "0.2.0-dev"
edition = "2018"
description = "Medea media server"
authors = ["Instrumentisto Team <developer@instrumentisto.com>"]
license = "MPL-2.0"
documentation = "https://docs.rs/medea"
homepage = "https://github.com/instrumentisto/medea"
repository = "https://github.com/instrumentisto/medea"
readme = "README.md"
keywords = ["medea", "media-server"]
categories = ["multimedia"]
include = ["/src/", "/Cargo.*", "/CHANGELOG.md", "/LICENSE.md", "/README.md"]

[badges]
travis-ci = { repositoy = "instrumentisto/medea" }

[workspace]
members = [
    "crates/medea-macro",
    "crates/e2e-tests-runner",
    "jason",
    "mock/control-api",
    "proto/client-api",
    "proto/control-api",
]

[profile.release]
lto = "thin"

[dependencies]
actix = "0.9"
actix-web = "2.0"
actix-web-actors = "2.0"
async-trait = "0.1"
chrono = "0.4"
config = "0.10"
deadpool = "0.5"
deadpool-redis = "0.5"
derive_more = "0.99"
dotenv = "0.15"
failure = "0.1"
futures = { version = "0.3", features = ["compat"] }
grpcio = { version = "0.4", features = ["openssl"] }
humantime-serde = "0.1"
medea-client-api-proto = { path = "proto/client-api", features = ["medea"] }
medea-control-api-proto = { path = "proto/control-api" }
medea-macro = { path = "crates/medea-macro" }
protobuf = "2.7"
rand = "0.7"
redis = "0.14"
rust-crypto = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
slog-async = "2.3"
slog-envlogger = "2.2"
slog-json = "2.3"
slog-scope = "4.1"
slog-stdlog = "4.0"
smart-default = "0.6"
tokio = { version = "0.2", features = ["signal", "time"] }
toml = "0.5"
url = "2.1"
[dependencies.slog]
    version = "2.5"
    features = ["release_max_level_trace", "max_level_trace"]

[dev-dependencies]
actix-codec = "0.2"
actix-http = "1.0"
actix-rt = "1.0"
awc = "1.0"
derive_builder = "0.9"
lazy_static = "1.4"
mockall = "0.6"
serial_test = "0.3"
serial_test_derive = "0.3"
tempfile = "3.1"
