[package]
name = "medea"
version = "0.2.0-rc.1"
edition = "2018"
resolver = "2"
description = "Medea media server"
authors = ["Instrumentisto Team <developer@instrumentisto.com>"]
license = "MPL-2.0"
documentation = "https://docs.rs/medea"
homepage = "https://github.com/instrumentisto/medea"
repository = "https://github.com/instrumentisto/medea"
readme = "README.md"
keywords = ["medea", "media-server"]
categories = ["multimedia"]
include = ["/src/", "/Cargo.*", "/CHANGELOG.md", "/LICENSE.md", "/README.md"]

[workspace]
members = [
    "crates/medea-coturn-telnet-client",
    "crates/medea-macro",
    "crates/medea-reactive",
    "jason",
    "mock/control-api",
    "proto/client-api",
    "proto/control-api",
]

[profile.release]
lto = "thin"
codegen-units = 1

[profile.release.package.medea-jason]
opt-level = "s"  # Tell rustc to optimize for small code size.

[profile.dev]
split-debuginfo = "unpacked"

[dependencies]
actix = "0.10"
actix-http = "2.0"
actix-web = "3.0"
actix-web-actors = "3.0"
argon2 = { version = "0.8", package = "rust-argon2", default-features = false }
async-trait = "0.1"
bytes = "0.5"
chrono = "0.4"
config = "0.10"
deadpool = "0.5"
deadpool-redis = "0.6"
derive_more = "0.99"
dotenv = "0.15"
failure = "0.1"
futures = { version = "0.3", features = ["compat"] }
humantime-serde = "1.0"
medea-client-api-proto = { path = "proto/client-api", features = ["medea"] }
medea-control-api-proto = "0.1"
medea-macro = { path = "crates/medea-macro" }
rand = "0.8"
rust-crypto = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
slog-async = "2.5"
slog-envlogger = "2.2"
slog-json = "2.3"
slog-scope = "4.3"
slog-stdlog = "4.0"
smart-default = "0.6"
subtle = { version = "2.2", default-features = false }
tokio = { version = "0.2", features = ["signal", "time"] }
toml = "0.5"
tonic = "0.3"
url = "2.1"
[dependencies.medea-coturn-telnet-client]
    version = "0.1"
    #path = "crates/medea-coturn-telnet-client"
    features = ["pool"]
[dependencies.slog]
    version = "2.5"
    features = ["release_max_level_trace", "max_level_trace"]
[dependencies.redis]
    package = "redis"
    version = "0.17"
    default-features = false
    features = ["tokio-comp"]

[dev-dependencies]
actix-codec = "0.3"
actix-rt = "1.1"
async-recursion = "0.3"
awc = "2.0"
cucumber_rust = { version = "0.8", features = ["macros"] }
derive_builder = "0.9"
fantoccini = "0.17"
function_name = "0.2"
hyper = { version = "0.14", features = ["server"] }
lazy_static = "1.4"
medea-control-api-mock = { path = "mock/control-api" }
mockall = "0.9"
once_cell = "1.5"
reqwest = { version = "0.11", features = ["json"] }
serial_test = "0.5"
tempfile = "3.1"
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
tokio-util = "0.6"
uuid = { version = "0.8", features = ["v4"] }
webdriver = "0.43"
[dev-dependencies.tokio_1]
    package = "tokio"
    version = "1.1"
    features = ["fs", "macros", "rt-multi-thread"]

[[test]]
name = "e2e"
path = "tests/e2e/main.rs"
harness = false  # allows Cucumber to print output instead of libtest

[[test]]
name = "integration"
path = "tests/integration/main.rs"
