[package]
name = "medea"
version = "0.3.0-dev"
edition = "2018"
resolver = "2"
description = "Medea media server"
authors = ["Instrumentisto Team <developer@instrumentisto.com>"]
license = "MPL-2.0"
documentation = "https://docs.rs/medea"
homepage = "https://github.com/instrumentisto/medea"
repository = "https://github.com/instrumentisto/medea"
readme = "README.md"
keywords = ["medea", "media-server"]
categories = ["multimedia"]
include = ["/src/", "/Cargo.*", "/CHANGELOG.md", "/LICENSE.md", "/README.md"]

[workspace]
members = [
    "crates/medea-coturn-telnet-client",
    "crates/medea-macro",
    "crates/medea-reactive",
    "jason",
    "mock/control-api",
    "proto/client-api",
    "proto/control-api",
]

[profile.release]
lto = "thin"
codegen-units = 1

[profile.release.package.medea-jason]
opt-level = "s"  # Tell rustc to optimize for small code size.

[profile.dev]
split-debuginfo = "unpacked"

[dependencies]
actix = "=0.11.0-beta.3"
actix-http = "=3.0.0-beta.5"
actix-service = "=2.0.0-beta.5"  # only to pin
actix-web = "=4.0.0-beta.5"
actix-web-actors = "=4.0.0-beta.4"
argon2 = { version = "0.8", package = "rust-argon2", default-features = false }
async-trait = "0.1"
bytes = "1.0"
chrono = "0.4"
config = "0.11"
derive_more = "0.99"
dotenv = "0.15"
failure = "0.1"
futures = { version = "0.3", features = ["compat"] }
humantime-serde = "1.0"
medea-client-api-proto = { version = "0.3", features = ["medea"] }
medea-control-api-proto = { path = "proto/control-api" }
medea-macro = "0.2"
rand = "0.8"
rust-crypto = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
slog-async = "2.5"
slog-envlogger = "2.2"
slog-json = "2.3"
slog-scope = "4.3"
slog-stdlog = "4.0"
smart-default = "0.6"
subtle = { version = "2.2", default-features = false }
tokio = { version = "1.5", features = ["signal", "time"] }
toml = "0.5"
tonic = "0.4"
url = "2.1"
[dependencies.deadpool]
    # TODO: Switch to `version =` on next version bumb.
    git = "https://github.com/bikeshedder/deadpool"
    rev = "8134ba16896a9149301ee9e2945744ba8210dad3"  # branch = "master"
    default-features = false
    features = ["managed"]
[dependencies.deadpool-redis]
    # TODO: Switch to `version =` on next version bumb.
    git = "https://github.com/bikeshedder/deadpool"
    rev = "8134ba16896a9149301ee9e2945744ba8210dad3"  # branch = "master"
    default-features = false
[dependencies.medea-coturn-telnet-client]
    #version = "0.1"
    path = "crates/medea-coturn-telnet-client"
    features = ["pool"]
[dependencies.slog]
    version = "2.5"
    features = ["release_max_level_trace", "max_level_trace"]
[dependencies.redis]
    package = "redis"
    version = "0.20"
    default-features = false
    features = ["tokio-comp"]

[dev-dependencies]
actix-codec = "=0.4.0-beta.1"
actix-http-test = "=3.0.0-beta.4"
actix-rt = "2.2"
async-recursion = "0.3"
awc = "=3.0.0-beta.4"
cucumber_rust = { version = "0.8", features = ["macros"] }
derive_builder = "0.10"
fantoccini = "0.17"
function_name = "0.2"
hyper = { version = "0.14", features = ["server"] }
lazy_static = "1.4"
medea-control-api-mock = { path = "mock/control-api" }
mockall = "0.9"
once_cell = "1.5"
reqwest = { version = "0.11", features = ["json"] }
serial_test = "0.5"
tempfile = "3.1"
tokio = { version = "1.5", features = ["fs", "macros", "rt-multi-thread"] }
tokio-stream = "0.1"
tokio-util = "0.6"
uuid = { version = "0.8", features = ["v4"] }
webdriver = "0.43"

[[test]]
name = "e2e"
path = "tests/e2e/main.rs"
harness = false  # allows Cucumber to print output instead of libtest

[[test]]
name = "integration"
path = "tests/integration/main.rs"
