[package]
name = "control-api-mock"
version = "0.1.0-dev"
edition = "2018"
description = "Mock server for medea's control API."
authors = ["Instrumentisto Team <developer@instrumentisto.com>"]
homepage = "https://github.com/instrumentisto/medea"
readme = "README.md"
repository = "https://github.com/instrumentisto/medea"

[dependencies]
actix = "0.8"
actix-web = "1.0"
actix-web-actors = "1.0"
futures = "0.1"
grpcio = "0.4"
serde = { version = "1.0", features = ["derive"] }
slog = "2.4"
slog-scope = "4.1"
slog-term = "2.3"
slog-async = "2.3"
slog-stdlog = "3.0"
slog-envlogger = "2.1"
dotenv = "0.13"
medea-grpc-proto = { path = "../proto/grpc"}
protobuf = "2.7"
actix-cors = "0.1"
