[package]
name = "medea-e2e-tests"
version = "0.1.0"
authors = ["Instrumentisto Team <developer@instrumentisto.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
cucumber_rust = { version = "0.8", features = ["macros"]}
derive_more = "0.99"
fantoccini = "0.17"
futures = "0.3"
hyper = { version = "0.14", features = ["server"] }
medea-control-api-mock = { path = "../mock/control-api" }
once_cell = "1.5"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.1", features = ["macros", "rt-multi-thread", "fs"] }
tokio-util = "0.6"
uuid = { version = "0.8", features = ["v4"] }
webdriver = "0.43"
