[package]
name = "medea-e2e"
version = "0.0.0"
edition = "2018"
resolver = "2"
description = "E2E tests for Medea media server"
authors = ["Instrumentisto Team <developer@instrumentisto.com>"]
publish = false

[dependencies]
derive_more = "0.99"
fantoccini = "0.17"
futures = "0.3"
once_cell = "1.0"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread"] }
uuid = { version = "0.8", features = ["v4"] }
webdriver = "0.43"

[dev-dependencies]
async-recursion = "0.3"
async-trait = "0.1"
cucumber_rust = { version = "0.8", features = ["macros"] }
medea-control-api-mock = { path = "../mock/control-api" }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[test]]
name = "e2e"
path = "tests/main.rs"
harness = false  # Allows Cucumber to print output instead of libtest.
