[package]
name = "jason"
version = "0.1.0-dev"
edition = "2018"
description = "Medea media server client application"
authors = ["Instrumentisto Team <developer@instrumentisto.com>"]
homepage = "https://github.com/instrumentisto/medea"
readme = "README.md"
repository = "https://github.com/instrumentisto/medea"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
futures = "0.1"
js-sys = "0.3"
medea-client-api-proto = { path = "../proto/client-api", features = ["jason"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.3"
[dependencies.web-sys]
    version = "0.3.4"
    features = [
        "console",
        "CloseEvent", "Event", "EventTarget", "MessageEvent",
        "WebSocket", "Window",
    ]

[dev-dependencies]
wasm-bindgen-test = "0.2"
