[package]
name = "medea-jason"
version = "0.2.0-dev"
edition = "2018"
description = "Client library for Medea media server"
authors = ["Instrumentisto Team <developer@instrumentisto.com>"]
license = "MPL-2.0"
documentation = "https://docs.rs/medea-jason"
homepage = "https://github.com/instrumentisto/medea/tree/master/jason"
repository = "https://github.com/instrumentisto/medea/tree/master/jason"
readme = "README.md"
keywords = ["medea", "jason", "webrtc", "client", "browser"]
categories = ["multimedia", "api-bindings", "web-programming", "wasm"]
exclude = ["/demo/", "/e2e-demo/"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "s"  # Tell `rustc` to optimize for small code size.

[features]
default = ["console_error_panic_hook", "wee_alloc"]
mockable = ["downcast", "fragile", "mockall", "predicates-tree"]

[dependencies]
anyhow = "1.0"
console_error_panic_hook = { version = "0.1", optional = true }
downcast = { version = "0.10", optional = true }
fragile = { version = "0.3", optional = true }
futures-preview = "=0.3.0-alpha.19"
js-sys = "0.3"
macro-attr = "0.2"
medea-client-api-proto = { path = "../proto/client-api", features = ["jason"] }
medea-macro = "0.1"
mockall = { version = "0.5", optional = true }
newtype_derive = "0.1"
predicates-tree = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
wee_alloc = { version = "0.4", optional = true }
[dependencies.web-sys]
    version = "0.3"
    features = [
        "CloseEvent", "console", "ConstrainDomStringParameters",
        "Event", "EventTarget",
        "MediaDevices","MediaDeviceInfo", "MediaDeviceKind",
        "MediaTrackConstraints", "MediaTrackSettings",
        "MediaStream", "MediaStreamTrackState","MediaStreamConstraints",
        "MediaStreamTrack", "MessageEvent", "Navigator", "RtcConfiguration",
        "RtcIceCandidate", "RtcIceServer", "RtcIceCandidateInit",
        "RtcPeerConnection", "RtcPeerConnectionIceEvent", "RtcRtpReceiver",
        "RtcRtpSender", "RtcRtpTransceiver", "RtcRtpTransceiverDirection",
        "RtcRtpTransceiverInit", "RtcSdpType", "RtcSessionDescription",
        "RtcSessionDescriptionInit", "RtcTrackEvent",
        "WebSocket", "Window",
    ]

[dev-dependencies]
wasm-bindgen-test = "0.3"
