[package]
name = "medea-jason"
version = "0.2.0-rc.1"
edition = "2018"
description = "Client library for Medea media server"
authors = ["Instrumentisto Team <developer@instrumentisto.com>"]
license = "MPL-2.0"
documentation = "https://docs.rs/medea-jason"
homepage = "https://github.com/instrumentisto/medea/tree/master/jason"
repository = "https://github.com/instrumentisto/medea/tree/master/jason"
readme = "README.md"
keywords = ["medea", "jason", "webrtc", "client", "browser"]
categories = ["multimedia", "api-bindings", "web-programming", "wasm"]
exclude = ["/demo/", "/e2e-demo/"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc"]
mockable = ["downcast", "fragile", "mockall", "predicates-tree"]

[dependencies]
async-recursion = "0.3"
async-trait = "0.1"
bitflags = "1.2"
console_error_panic_hook = { version = "0.1", optional = true }
derivative = "2.1"
derive_more = "0.99"
downcast = { version = "0.10", optional = true }
fragile = { version = "1.0", optional = true }
futures = "0.3"
js-sys = "0.3"
log = "0.4"
medea-client-api-proto = { version = "0.2", features = ["jason"] }
medea-macro = "0.2"
medea-reactive = "0.1"
mockall = { version = "0.9", optional = true }
predicates-tree = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracerr = "0.1"
url = "2.1"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
wee_alloc = { version = "0.4", optional = true }
[dependencies.web-sys]
    version = "0.3.47"
    features = [
        "console",
        "ConstrainDomStringParameters", "ConstrainDoubleRange",
        "CloseEvent",
        "DisplayMediaStreamConstraints",
        "Event", "EventTarget",
        "MediaDevices","MediaDeviceInfo", "MediaDeviceKind",
        "MediaTrackConstraints", "MediaTrackSettings",
        "MediaStream", "MediaStreamConstraints",
        "MediaStreamTrack", "MediaStreamTrackState",
        "MessageEvent",
        "Navigator",
        "RtcBundlePolicy",
        "RtcConfiguration",
        "RtcIceCandidate", "RtcIceCandidateInit",
        "RtcIceConnectionState",
        "RtcIceServer",
        "RtcIceTransportPolicy",
        "RtcOfferOptions",
        "RtcPeerConnection", "RtcPeerConnectionIceEvent",
        "RtcRtpReceiver", "RtcRtpSender",
        "RtcRtpTransceiver", "RtcRtpTransceiverDirection",
        "RtcRtpTransceiverInit",
        "RtcSdpType",
        "RtcSessionDescription", "RtcSessionDescriptionInit",
        "RtcStats",
        "RtcTrackEvent",
        "WebSocket", "Window",
    ]

[dev-dependencies]
wasm-bindgen-test = "0.3"
