[package]
name = "medea-derives"
version = "0.1.0-dev"
edition = "2018"
description = "Derive macros for medea."
authors = ["Instrumentisto Team <developer@instrumentisto.com>"]
homepage = "https://github.com/instrumentisto/medea"
repository = "https://github.com/instrumentisto/medea"

[dependencies]
syn = { version = "0.15.34", features = ["full"] }
quote = "0.6.12"

[lib]
proc-macro = true
