[package]
name = "protocol"
version = "0.1.0"
edition = "2018"
authors = ["Instrumentisto Team <developer@instrumentisto.com>"]
homepage = "https://github.com/instrumentisto/medea"
readme = "README.md"
repository = "https://github.com/instrumentisto/medea"

[dependencies]
serde = { version = "1.0", features = ['derive'] }
serde_json = "1.0"
