[package]
name = "coturn-telnet"
version = "0.1.0-dev"
edition = "2018"
description = "Coturn TURN server telnet client"
authors = ["Instrumentisto Team <developer@instrumentisto.com>"]
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/coturn-telnet"
homepage = "https://github.com/instrumentisto/medea/tree/master/crates/coturn-telnet"
repository = "https://github.com/instrumentisto/medea/tree/master/crates/coturn-telnet"
readme = "README.md"
keywords = ["coturn", "telnet", "cli"]
categories = ["web-programming"]

[dependencies]
async-trait = "0.1"
bytes = "0.5"
deadpool = "0.5"
derive_more = "0.99"
futures = "0.3"
lazy_static = "1.4"
regex = "1.3"
tokio = { version = "0.2", features = ["dns", "macros"] }
tokio-util = { version = "0.2", features = ["codec"] }
nom = "5.1"

[dev-dependencies]
tokio-test = "0.2"
