[package]
name = "crate-version-grep"
version = "0.1.0-dev"
edition = "2018"
description = "TODO"
authors = ["Instrumentisto Team <developer@instrumentisto.com>"]
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/medea-macro"
homepage = "https://github.com/instrumentisto/medea/tree/master/crates/cargo-lock-parser"
repository = "https://github.com/instrumentisto/medea/tree/master/crates/cargo-lock-parser"
readme = "README.md"
# TODO
keywords = ["medea", "macro", "derive"]
categories = ["development-tools::build-utils"]

[dependencies]
cargo-lock = "3.0.0"
