[package]
name = "crate-version-grep"
version = "0.1.0-dev"
edition = "2018"
description = "CLI application for getting current locked version of crate from 'Cargo.lock' file."
authors = ["Instrumentisto Team <developer@instrumentisto.com>"]
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/crate-version-grep"
homepage = "https://github.com/instrumentisto/medea/tree/master/crates/crate-version-grep"
repository = "https://github.com/instrumentisto/medea/tree/master/crates/crate-version-grep"
readme = "README.md"
keywords = ["crate", "version", "Cargo.lock"]
categories = ["command-line-utilities"]
publish = false

[dependencies]
cargo-lock = "3.0"
