[package]
name = "e2e-tests-runner"
version = "0.1.0-dev"
edition = "2018"
description = "E2E tests runner for Medea."
authors = ["Instrumentisto Team <developer@instrumentisto.com>"]
homepage = "https://github.com/instrumentisto/medea"
readme = "README.md"
repository = "https://github.com/instrumentisto/medea"

[dependencies]
actix-rt = "1.0"
actix-web = "2.0"
actix-files = "0.2"
clap = "2.33"
failure = "0.1"
fantoccini = "0.12"
futures = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
webdriver = "0.40"
yansi = "0.5"
derive_builder = "0.9"
