[package]
name = "js_caused"
version = "0.1.0"
edition = "2018"
description = "Error handling for `medea-jason` crate"
authors = ["Instrumentisto Team <developer@instrumentisto.com>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/instrumentisto/medea/tree/master/crates/js_caused"
repository = "https://github.com/instrumentisto/medea/tree/master/crates/js_caused"
readme = "README.md"
keywords = ["medea", "js_caused", "derive"]
categories = ["development-tools::build-utils"]

[dependencies]
js-sys = "0.3"
js_caused_derive = { path = "../js_caused_derive" }