[package]
name = "js_caused_derive"
version = "0.1.0"
edition = "2018"
description = "derives for the js_caused crate"
authors = ["Instrumentisto Team <developer@instrumentisto.com>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/instrumentisto/medea/tree/master/crates/js_caused_derive"
repository = "https://github.com/instrumentisto/medea/tree/master/crates/js_caused_derive"
readme = "README.md"
keywords = ["medea", "js_caused", "derive"]
categories = ["development-tools::build-utils"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
synstructure = "0.12"
