[package]
name = "medea-coturn-telnet-client"
version = "0.1.1"
edition = "2018"
resolver = "2"
description = "Coturn TURN server telnet client"
authors = ["Instrumentisto Team <developer@instrumentisto.com>"]
license = "BlueOak-1.0.0"
documentation = "https://docs.rs/medea-coturn-telnet-client"
homepage = "https://github.com/instrumentisto/medea/tree/master/crates/medea-coturn-telnet-client"
repository = "https://github.com/instrumentisto/medea/tree/master/crates/medea-coturn-telnet-client"
readme = "README.md"
keywords = ["coturn", "telnet", "cli", "client"]
categories = ["api-bindings", "network-programming"]

[features]
pool = ["async-trait", "deadpool"]

[dependencies]
async-trait = { version = "0.1.20", optional = true }
bytes = "0.5"
derive_more = "0.99"
futures = "0.3"
once_cell = "1.3.1"
regex = "1.3.4"
tokio = { version = "0.2", features = ["dns", "tcp"] }
tokio-util = { version = "0.3", features = ["codec"] }
[dependencies.deadpool]
    version = "0.5"
    optional = true
    features = ["managed"]
    default-features = false

[dev-dependencies]
tokio = { version = "0.2", features = ["macros"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
