[package]
name = "medea-reactive"
version = "0.1.1"
edition = "2018"
resolver = "2"
description = "Reactive mutable data containers"
authors = ["Instrumentisto Team <developer@instrumentisto.com>"]
license = "BlueOak-1.0.0"
documentation = "https://docs.rs/medea-reactive"
homepage = "https://github.com/instrumentisto/medea/tree/master/crates/medea-reactive"
repository = "https://github.com/instrumentisto/medea/tree/master/crates/medea-reactive"
readme = "README.md"
keywords = ["medea", "reactive", "reactivity", "observable"]
categories = ["asynchronous", "data-structures"]

[dependencies]
futures = "0.3"

[dev-dependencies.tokio]
    version = "0.2"
    features = ["macros", "rt-core", "rt-util", "test-util", "time"]
