[package]
name = "medea-macro"
version = "0.1.0-dev"
edition = "2018"
description = "Macros for medea."
authors = ["Instrumentisto Team <developer@instrumentisto.com>"]
homepage = "https://github.com/instrumentisto/medea"
repository = "https://github.com/instrumentisto/medea"

[dependencies]
syn = "0.15"
quote = "0.6"

[lib]
proc-macro = true
