[package]
name = "jason-android"
version = "0.0.1"
authors = ["Instrumentisto Team <developer@instrumentisto.com>"]
edition = "2018"

[lib]
name = "jason_java"
crate-type = ["cdylib"]

[dependencies]
derive_more = "0.99"
android_logger = "0.9"
futures = "0.3"
log = "0.4"
log-panics = "2.0"
once_cell = "1.5"
tokio = { version = "1.2", features = ["full"] }

[target.'cfg(target_os = "android")'.dependencies]
#jni-sys = { package = "ndk-sys", version = "0.2" }
jni-sys = "0.3"
jni = "0.19"

[target.'cfg(not(target_os = "android"))'.dependencies]
jni-sys = "0.3"
jni = "0.19"
