[package]
name = "jason-dummy"
version = "0.0.1"
edition = "2018"
description = "Temp crate to help us bootstrap flutter + rust builds"

[lib]
name = "jason"
crate-type = ["staticlib", "cdylib"]

[dependencies]
android_logger = "0.10.1"
dart-sys = "2.0"
futures = "0.3.14"
libc = "0.2"
log = "0.4.14"

[build-dependencies]
cc = "1.0"

[workspace]
