[package]
name = "medea-control-api-mock"
version = "0.1.0-dev"
edition = "2018"
description = "Mock server for Medea's control API."
authors = ["Instrumentisto Team <developer@instrumentisto.com>"]
homepage = "https://github.com/instrumentisto/medea"
readme = "README.md"
repository = "https://github.com/instrumentisto/medea"
publish = false

[dependencies]
actix = "0.10"
actix-cors = "0.4"
actix-web = "3.0"
actix-web-actors = "3.0"
clap = "2.33"
derive_more = "0.99"
dotenv = "0.15"
humantime-serde = "1.0"
medea-control-api-proto = { path = "../../proto/control-api" }
protobuf = "2.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slog = "2.5"
slog-async = "2.5"
slog-envlogger = "2.2"
slog-scope = "4.3"
slog-stdlog = "4.0"
slog-term = "2.5"
smart-default = "0.6"
tonic = "0.3"
