[package]
name = "medea-client-api-proto"
version = "0.1.0"
edition = "2018"
description = "Client API protocol implementation for Medea media server"
authors = ["Instrumentisto Team <developer@instrumentisto.com>"]
homepage = "https://github.com/instrumentisto/medea"
license = "MIT/Apache 2.0"
readme = "README.md"
repository = "https://github.com/instrumentisto/medea"

[features]
default = ["jason", "medea"]
jason = []
medea = []

[dependencies]
medea-macro = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
