[package]
name = "medea-client-api-proto"
version = "0.1.0"
edition = "2018"
description = "Client API protocol implementation for Medea media server"
authors = ["Instrumentisto Team <developer@instrumentisto.com>"]
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/medea-client-api-proto"
homepage = "https://github.com/instrumentisto/medea/tree/master/proto/client-api"
repository = "https://github.com/instrumentisto/medea/tree/master/proto/client-api"
readme = "README.md"
keywords = ["medea", "client-api"]
categories = ["api-bindings", "web-programming"]

[features]
default = ["jason", "medea"]
jason = []
medea = []

[dependencies]
medea-macro = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
